--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <structured-logging.version>1.9.8</structured-logging.version>
+        <structured-logging.version>1.9.10</structured-logging.version>
+        <log4j.version>2.15.0</log4j.version>
         <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
         <gson.version>2.8.0</gson.version>
         <guava.version>28.1-jre</guava.version>
@@ -103,6 +104,22 @@
             <artifactId>structured-logging</artifactId>
             <version>${structured-logging.version}</version>
             <scope>compile</scope>
+        </dependency>
+        <!-- Override log4j versions -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-to-slf4j</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.gov.companieshouse</groupId>
